--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	</head>
 	
 	<body>
-	<ul class ="navigation">
-		<a href="#">Home</a> </li>
-		<a href="#">About</a> </li>
-		<a href="#">contact</a> </li>
-		<a href ="#">follow</a> </li>
-    </ul>
+	<nav>
+		<ul>
+			<li><a href="#">Home</a> </li>
+			<li><a href="#">About</a> </li>
+			<li><a href="#">contact</a> </li>
+			<li><a href ="#">follow</a> </li>
+		</ul>
+	</nav>
 	  <h1>Tortoise and Hare</h1>
 	   <h3>Choose Your Own Adventure Game</h3>
 	   
