--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 	   
 		    <img src="rabbit.jpg"/>
 			
-			
-		<button type="button">START GAME</button>
+		<a href="page1.html">
+  		<button>START GAME</button>
+		</a>
 		<footer id="copyright">
 		<p>copyright&copy; 2021nimzy's creations</p>
 
