--- a/page1.html
+++ b/page1.html
@@ -13,12 +13,13 @@
 		<div class="col">
 		<h2>THE CHALLENGE</h2>
 		<p>There once was a hare who bragged about how fast he could run. Tired of hearing him boast then tortoise decided to challenge him to a...</p>
-		<p>Now you choose should they have a fight or race.</p><p>To fight click on hare image.To race click on tortoise image</p>
+		<p>Now you choose should they have a fight or race.</p><p>To race click on hare image.To fight click on tortoise image</p>
 	</div>
 		
-			<div class= "card card1"></div>
-			<div class= "card card2"></div>
-		</div>
+			<a href="page2.html"><div class= "card hare"></div></a>
+			<a href="page3.html"><div class= "card tortoise"></div></a>
+			
+	</div>
 	
 		
 			
@@ -26,7 +27,7 @@
 		
 		<footer id="copyright">
 		<img src="grass.jpg"/>
-		<p>copyright&copy; 2021nimzy's creations</p>
+		<p>copyright&copy; 2021nimzy's creations </p>
 		
 </body>
 
