--- a/aboutus.html
+++ b/aboutus.html
@@ -23,18 +23,29 @@ p {
 	color:blue;
 	font-family:verdana;
 	font-size:15px solid;
-	margin-left:50px;
+	margin-left:5px;
 	background-color:white;
+	padding:10px;
 	
 }
-li {
+a {
 	text-decoration:none;
     display:block;
-	color:blue;
+	color:coral;
 	font-family:verdana;
-	font-size:15px solid;
+	font-size:30px solid;
 	margin-left:50px;
 	
+	
+}
+.sign{
+		color:red;
+		font-family:papyrus;
+		text-align:center;
+		position:absolute;
+		top:90%;
+		left:40%;
+		
 }
 </style>
 	</head>
@@ -42,18 +53,14 @@ li {
 
  <li class="menu"> <a  href="index.html">HOME</a></li>
  
-<h1>Contact us</h1>
-<P> For more choose your own adventure games and
- other stories<br/> <br/>follow us by clicking on any of the
-the links below.</p>
-
-<li><a href="https://www.facebook.com/">FACEBOOK</a> </li><br/>
-<li><a  href="https://www.instagram.com/">INSTAGRAM</a></li>
+<h1>About Us</h1>
+<P> This website was put together by Nimat Umaru of Computing department at Edinburgh Napier university.
+with lots of insprations from her kids.</p>
 
 
 
-<footer id="copyright">
-		<p style="color:coral">copyright&copy; 2021nimzy's creations</p>
+<footer>
+		<p class="sign">copyright&copy; 2021nimzy's creations</p>
 		</footer>
 </body>
 </html>
