--- a/page1.html
+++ b/page1.html
@@ -7,6 +7,14 @@
 	</head>
 	
 	<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a> </li>
+			<li><a href="aboutus.html">About us</a> </li>
+			<li><a href="contact.html">contact</a> </li>
+			<li><a href ="videos.html">Videos</a> </li>
+		</ul>
+	</nav>
 	<img src="sky.jpg"/>
 	
 	<div class="row">
@@ -25,14 +33,12 @@
 			
 			
 		
-		<footer id="copyright">
+		<footer>
 		<img src="grass.jpg"/>
-		<p>copyright&copy; 2021nimzy's creations </p>
+		<p class="sign">copyright&copy; 2021nimzy's creations </p>
 		
 </body>
 
-
-<!--https://pin.it/3q4RPYH link to video with hare on tortise
 
 
 
