--- a/page2.html
+++ b/page2.html
@@ -8,6 +8,15 @@
 	</head>
 	
 	<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a> </li>
+			<li><a href="aboutus.html">About us</a> </li>
+			<li><a href="contact.html">contact</a> </li>
+			<li><a href ="videos.html">Videos</a> </li>
+		</ul>
+	</nav>
+	
 	<img src="sky.jpg"/>
 	
 	<div class="row">
@@ -15,14 +24,14 @@
 		<h2>THE RACE</h2>
 		<p> tortoise, challenged him to a race. All the animals in the forest gathered to watch.
 Hare ran down the road for a while and then paused to tell everyone at Nimzy's bakery that he would win the 
-competition and would be awarded alot of money,that he will buy one of every item in the store but 
-he couldn'take his eyes off the cheese cake. He thought to himself,"tortoise is extra slow i can sit here,eat more than 2 cake slices and still win".Then he ordered 4 slices of cheese cakes,took his time to have a chat 
-thinking, "There is plenty of time to relax."
+competition and would be awarded alot of money but 
+he couldn'take his eyes off the cheese cake.Then he ordered 4 slices of cheese cakes,took his time to eat 
+thinking, "There is plenty of time to relax." click on tortoise image to see what happens next.
 </p>
 	</div>
 		
 		<a href="page4.html"><div class="card tortoisewins"></div></a>
-		<a href="index.html"><div class="card card2"></div></a>
+		<a href="index.html"><div class="card home"></div></a>
 			
 	</div>
 	
@@ -30,9 +39,9 @@ thinking, "There is plenty of time to relax."
 			
 			
 		
-		<footer id="copyright">
+		<footer>
 		<img src="grass.jpg"/>
-		<p>copyright&copy; 2021nimzy's creations </p>
+		<p class="sign">copyright&copy; 2021nimzy's creations </p>
 		
 </body>
 
