--- a/page3.html
+++ b/page3.html
@@ -7,17 +7,26 @@
 	</head>
 	
 	<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a> </li>
+			<li><a href="aboutus.html">About us</a> </li>
+			<li><a href="contact.html">contact</a> </li>
+			<li><a href ="videos.html">Videos</a> </li>
+		</ul>
+	</nav>
 	<img src="sky.jpg"/>
 	
 	<div class="row">
 		<div class="col">
 		<h2>THE FIGHT</h2>
-		<p>There once was a hare who bragged about how fast he could run. Tired of hearing him boast then tortoise decided to challenge him to a...</p>
-		<p>Now you choose should they have a fight or race.</p><p>To race click on hare image.To fight click on tortoise image</p>
+		<p>tortoise challenged hare to a fight,hare laughed out loud saying "we all know who'll win this fight".As soon as the fight started, the crowd started cheering tortise
+		they were sure he would win beacuse of his hard built shell which could crush hare easily.Tortoise gave the first blow and hare fell to the ground seeing stars, 
+		he tried hard to get back up but he was in so much pain he laid down on the floor close to a tree. 
 	</div>
 		
-			<a href="page5.html"><div class= "card card1"></div></a>
-			<a href="index.html"><div class= "card card2"></div></a>
+			<a href="page5.html"><div class= "card fight"></div></a>
+			<a href="index.html"><div class= "card home"></div></a>
 			
 	</div>
 	
@@ -25,12 +34,12 @@
 			
 			
 		
-		<footer id="copyright">
+		<footer>
 		<img src="grass.jpg"/>
-		<p>copyright&copy; 2021nimzy's creations </p>
+		<p class="sign">copyright&copy; 2021nimzy's creations </p>
+		</footer>
 		
 </body>
 
 
-<!--https://pin.it/3q4RPYH link to video with hare on tortise
 
