--- a/page5.html
+++ b/page5.html
@@ -7,17 +7,27 @@
 	</head>
 	
 	<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a> </li>
+			<li><a href="aboutus.html">About us</a> </li>
+			<li><a href="contact.html">contact</a> </li>
+			<li><a href ="videos.html">Videos</a> </li>
+		</ul>
+	</nav>
 	<img src="sky.jpg"/>
 	
 	<div class="row">
 		<div class="col">
 		<h2>Hare wins fight</h2>
-		<p>There once was a hare who bragged about how fast he could run. Tired of hearing him boast then tortoise decided to challenge him to a...</p>
-		<p>Now you choose should they have a fight or race.</p><p>To race click on hare image.To fight click on tortoise image</p>
+		<p>Tortoise climbed up the tree with the aim of crushing hare. 
+		As soon as he jumped down,hare musceled up some strength and moved away  making tortise  fall on his back. His shell cracked and broken into pieces, 
+		he cried and couldn't stand up again and so hare was declared the winner.click on hare image to see how they celebarted 
+		his victory. HURRAY!!! hare won</p>
 	</div>
 		
-			<a href="page6.html"><div class= "card card1"></div></a>
-			<!--<a href="index.html"><div class= "card card2"></div></a>-->
+			<a href="page6.html"><div class= "card hare"></div></a>
+			<a href="index.html"><div class= "card home"></div></a>
 			
 	</div>
 	
@@ -25,8 +35,8 @@
 			
 			
 		
-		<footer id="copyright">
+		<footer>
 		<img src="grass.jpg"/>
-		<p>copyright&copy; 2021nimzy's creations </p>
-		
+		<p class="sign">copyright&copy; 2021nimzy's creations </p>
+		</footer>
 </body>
