--- a/page4.html
+++ b/page4.html
@@ -7,6 +7,14 @@
 	</head>
 	
 	<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a> </li>
+			<li><a href="aboutus.html">About us</a> </li>
+			<li><a href="contact.html">contact</a> </li>
+			<li><a href ="videos.html">Videos</a> </li>
+		</ul>
+	</nav>
 	<img src="sky.jpg"/>
 	
 	
@@ -15,24 +23,24 @@
 		<div class="row">
 		<div class="col">
 		<h2>Tortoise Wins The Race</h2>
-		<p>slow and steady tortoise walked and walked. He never, ever stopped until he came to the finish line.
-		The animals who were watching cheered so loudly for Tortoise, they alerted hare.Hare stretched and 
+		<p>slow and steady tortoise walked and walked, he never stopped until he came to the finish line.
+		The animals who were watching cheered so loudly for Tortoise,that they alerted hare.Hare stretched and 
 		began to run again, but it was too late. Tortoise was over the line.
 		After that, Hare always reminded himself, "Don't brag about your lightning pace, 
-		for Slow and Steady won the race!" See HOW they celebrated Tortoise's victory by clicking on Tortoise.</p>
+		for Slow and Steady won the race!" See how they celebrated Tortoise's victory by clicking on Tortoise image.</p>
 			
 	</div>
 		
-			<a href="page6.html"><div class= "card card1"></div></a>
-			<a href="index.html"><div class= "card card2"></div></a>
+			<a href="page6.html"><div class= "card tortoisewins"></div></a>
+			<a href="index.html"><div class= "card home"></div></a>
 			
 	</div>
 	
 			
 			
 		
-		<footer id="copyright">
+		<footer>
 		<img src="grass.jpg"/>
-		<p>copyright&copy; 2021nimzy's creations </p>
-		
+		<p class="sign">copyright&copy; 2021nimzy's creations </p>
+		</footer>
 </body>
