--- a/page6.html
+++ b/page6.html
@@ -5,7 +5,10 @@
 		<link rel ="stylesheet" type="text/css" href="page6.css">
 	</head>
 	
+	
 	<body>
+		
+	
 	
 	<div class="balloons">
 		<img src="balloons.jpg">
@@ -17,6 +20,10 @@
 		<img src="tpbll.jpg">
 	</div>
 		<a href="index.html">HOME</a> 
-	
+	<audio controls>
+	<source src="champ.mp3" file="audio/mpeg"> 
+	</audio>
 	</body>
 	</html>
+	
+	
